--- a/games.html
+++ b/games.html
@@ -9,6 +9,7 @@ body {
     </style>
 <title>ZIUI Games</title>
 <p style="font-size:30px;color:azure;">ZIUI Games </p>
-    <li style="font-size:30px"><a href="https://classic.minecraft.net/?join=ir4YWFzaftcHneXM">Minecraft Classic(我的世界网页版）</a></li>
+    <li style="font-size:30px"><a href="https://classic.minecraft.net/?join=ir4YWFzaftcHneXM">Minecraft Classic(网页版）</a></li>
+     <li style="font-size:30px"><a href="http://mc.163.com/exp/">我的世界（非官方）</a></li>
 <p style="color:black;font-size:60px">Author:ZIUI OPEN Lab &nbsp;&nbsp; 2023.10.12</p>
 </html>
