--- a/games.html
+++ b/games.html
@@ -11,5 +11,6 @@ body {
 <p style="font-size:30px;color:azure;">ZIUI Games </p>
     <li style="font-size:30px"><a href="https://classic.minecraft.net/?join=ir4YWFzaftcHneXM">Minecraft Classic(网页版）</a></li>
      <li style="font-size:30px"><a href="http://mc.163.com/exp/">我的世界（非官方）</a></li>
+    <li style="font-size:30px"><a href="https://www.msn.cn/zh-cn/play/arcade">游戏集合（无广告、免登陆）</a></li>
 <p style="color:black;font-size:60px">Author:ZIUI OPEN Lab &nbsp;&nbsp; 2023.10.12</p>
 </html>
