--- a/games.html
+++ b/games.html
@@ -12,5 +12,6 @@ body {
     <li style="font-size:30px"><a href="https://classic.minecraft.net/?join=ir4YWFzaftcHneXM">Minecraft Classic(网页版）</a></li>
      <li style="font-size:30px"><a href="http://mc.163.com/exp/">我的世界（非官方）</a></li>
     <li style="font-size:30px"><a href="https://www.msn.cn/zh-cn/play/arcade">游戏集合（无广告、免登陆）</a></li>
+    <li style="font-size:30px"><a href="https://https://www.msn.cn/zh-cn/play/games/kitten-force-frvr/cg-9n0h11cbnrrj?cgfrom=cg_landing_L2_arcade&cvid=cf434910e8de42ebb4ffc7e38b4003bf&ei=153">太空猫飞机大战</a></li>
 <p style="color:black;font-size:60px">Author:ZIUI OPEN Lab &nbsp;&nbsp; 2023.10.12</p>
 </html>
