--- a/games.html
+++ b/games.html
@@ -12,5 +12,5 @@ body {
     <li style="font-size:30px"><a href="https://classic.minecraft.net/?join=ir4YWFzaftcHneXM">Minecraft Classic(网页版）</a></li>
      <li style="font-size:30px"><a href="http://mc.163.com/exp/">我的世界（非官方）</a></li>
     <li style="font-size:30px"><a href="https://www.msn.cn/zh-cn/play/arcade">游戏集合（无广告、免登陆）</a></li>
-    <h2 style="position: absolute;left:.2rem;bottom:.3rem;color:black;font-size:.35rem;" >ZIUI OPEN Lab</h2>
+    <h2 style="position: absolute;right:.2rem;bottom:.3rem;color:white;font-size:.35rem;" >ZIUI OPEN Lab</h2>
 </html>
