--- a/games.html
+++ b/games.html
@@ -3,7 +3,7 @@
 </body>
 <style>
 body {
-    background-image: url('https://img2.baidu.com/it/u=562979666,788086360&fm=253&fmt=auto&app=138&f=JPEG?w=960&h=350');
+    background-image: url('https://images.hdqwalls.com/download/rog-logo-2020-4k-ii-3840x2400.jpg');
         background-size:cover;
     }
     </style>
