--- a/116班点名/点名.html
+++ b/116班点名/点名.html
@@ -295,7 +295,7 @@
             },
             methods: {
                 reset: function(){
-                    if(confirm('确定要重置么？所有之前的抽奖历史将被清除！')){
+                    if(confirm('确定要重置么？所有之前的点名历史将被清除！')){
                         localStorage.clear();
                         location.reload(true);
                     }
