--- a/games.html
+++ b/games.html
@@ -12,5 +12,6 @@ body {
     <li style="font-size:30px"><a href="https://classic.minecraft.net/?join=ir4YWFzaftcHneXM">Minecraft Classic(网页版）</a></li>
      <li style="font-size:30px"><a href="http://mc.163.com/exp/">我的世界（网易网页版）</a></li>
     <li style="font-size:30px"><a href="https://www.msn.cn/zh-cn/play/arcade">游戏集合（无广告、免登陆）</a></li>
+    <input type="button" value="ziui1" onclick="window.location.href='ziui1.github.io'">
     <h1 style="position: absolute;right:.2rem;bottom:.3rem;color:white;font-size:.35rem;" >ZIUI OPEN Lab</h1>
 </html>
