--- a/grades.html
+++ b/grades.html
@@ -3,5 +3,6 @@
   </body>
   <title>116成绩查询</title>
    <li style="font-size:30px"><a href="http://mail.163.com/js6/s?func=mbox:getMessageData&mid=405:xtbBlQUhtlgi4jTx7gAAs0&part=3">116第二次联考</a></li>
+     <li style="font-size:30px"><a href="http://mail.163.com/js6/s?func=mbox:getMessageData&mid=279:xtbBFxojtlgi68PFjwAAsA&part=3">116第三次联考</a></li>
 </html>
   
