--- a/grades.html
+++ b/grades.html
@@ -1,6 +1,12 @@
 <html>
   <body>
   </body>
+<style>
+body {
+    background-image: url('https://pic3.zhimg.com/80/v2-ac1f460b516d7c78e8eda2844ce6797a_720w.webp');
+        background-size:cover;
+    }
+    </style>
   <title>116成绩查询</title>
    <li style="font-size:30px"><a href="http://mail.163.com/js6/s?func=mbox:getMessageData&mid=405:xtbBlQUhtlgi4jTx7gAAs0&part=3">116第二次联考</a></li>
      <li style="font-size:30px"><a href="http://mail.163.com/js6/s?func=mbox:getMessageData&mid=279:xtbBFxojtlgi68PFjwAAsA&part=3">116第三次联考</a></li>
