--- a/grades.html
+++ b/grades.html
@@ -11,5 +11,6 @@ body {
   <p style="font-size:40px;color:azure;">116班成绩查询</p>
    <li style="font-size:30px"><a href="http://mail.163.com/js6/s?func=mbox:getMessageData&mid=405:xtbBlQUhtlgi4jTx7gAAs0&part=3">116第二次联考</a></li>
      <li style="font-size:30px"><a href="http://mail.163.com/js6/s?func=mbox:getMessageData&mid=279:xtbBFxojtlgi68PFjwAAsA&part=3">116第三次联考</a></li>
+   <li style="font-size:30px"><a href="https://mail.163.com/js6/read/readdata.jsp?sid=ILxgWkuuyQZsZRSBsQuufjjbJtZWIzYK&mid=62:1tbiPg4xtlxBvCJxIQAAsk&part=3&mode=inline">116期中考试</a></li>
 </html>
   
